# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-20f7c5ecc6287fe2582566d24496847c1e130aab03718fe4d19a491a00b12b8a.json
migrations/: 20260228103115_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
